--- a/layout-parts/q4/index.html
+++ b/layout-parts/q4/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div class="wrapper">
+<div class="wrapper frame">
     <h1 class="title">基本レイアウト・パーツ</h1>
 
     <div class="box">
@@ -37,15 +37,16 @@
         -->
         <!-- 回答はここに書いてね -->
         <div class="main">
-            <div class="box1">1</div>
-            <div class="box2">2</div>
-            <div class="box3">3</div>
-            <div class="box4">4</div>
-            <div class="box5">5</div>
-            <div class="box6">6</div>
-            <div class="box7">7</div>
-            <div class="box8">8</div>
+            <div class="box-layout box1">1</div>
+            <div class="box-layout box2">2</div>
+            <div class="box-layout box3">3</div>
+            <div class="box-layout box4">4</div>
+            <div class="box-layout box5">5</div>
+            <div class="box-layout box6">6</div>
+            <div class="box-layout box7">7</div>
+            <div class="box-layout box8">8</div>
         </div>
+        <div class="box-layout box9">9</div>
         <!-- 回答はここに書いてね -->
     </div>
 </div>
