--- a/layout-parts/q5/index.html
+++ b/layout-parts/q5/index.html
@@ -33,6 +33,7 @@
         中央寄せするブロックの横幅が固定の場合は上の方法が、可変の場合は下の方法が向いています。
         -->
         <div class="q5__horizontal mb20">
+          <div class="main1">
             <div class="q5__horizontal__box">
                 <!--
                 ■この問題で使う大事なプロパティ
@@ -40,8 +41,8 @@
                 ・text-align
                 -->
                 <!-- Q5-1の回答はここに書いてね -->
-                <div>
-                    <p>text-align</p>
+                <div class="box1">
+                    <p class="item">text-align</p>
                 </div>
                 <!-- Q5-1の回答はここに書いてね -->
             </div>
@@ -51,9 +52,12 @@
                 ・margin
                 -->
                 <!-- Q5-1の回答はここに書いてね -->
-                <p>margin</p>
+                <div class="box2">
+                  <p class="item">margin</p>
+                </div>
                 <!-- Q5-1の回答はここに書いてね -->
             </div>
+          </div>
         </div>
 
         <p class="title--sub">ー Q5-2 天地左右中央寄せ ー</p>
@@ -76,12 +80,13 @@
         ・vertical-align
         -->
         <!-- Q5-2の回答はここに書いてね -->
-        <div class="q5__box">
-            <div class="q5__vertical__table__inner">
+        <div class="q5__box main2">
+          <div class="q5__vertical__table__inner item2">
                 <p class="q5__vertical__table__txt">table</p>
-            </div>
+          </div>
         </div>
         <!-- Q5-2の回答はここに書いてね -->
+
 
         <!--
         ■この問題で使う大事なプロパティ
@@ -90,7 +95,7 @@
         ・justify-content
         -->
         <!-- Q5-2の回答はここに書いてね -->
-        <div class="q5__box">
+        <div class="q5__box main3">
             <p>flex</p>
         </div>
         <!-- Q5-2の回答はここに書いてね -->
@@ -104,7 +109,7 @@
             ・margin
             -->
             <!-- Q5-2の回答はここに書いてね -->
-            <div class="q5__box__inner">
+            <div class="q5__box__inner main4">
                 <p class="q5__box__inner--stable">position固定</p>
             </div>
             <!-- Q5-2の回答はここに書いてね -->
@@ -117,9 +122,11 @@
             ・transform
             -->
             <!-- Q5-2の回答はここに書いてね -->
-            <div class="q5__box__inner">
+
+            <div class="q5__box__inner main5">
                 <p class="q5__box__inner--flexible">position可変</p>
             </div>
+          </div>
             <!-- Q5-2の回答はここに書いてね -->
         </div>
     </div>
