Q5修正とQ6完成です。よろしくお願いします

--- a/layout-parts/q5/index.html
+++ b/layout-parts/q5/index.html
@@ -82,7 +82,7 @@
         <!-- Q5-2の回答はここに書いてね -->
         <div class="q5__box main2">
           <div class="q5__vertical__table__inner item2">
-                <p class="q5__vertical__table__txt">table</p>
+                <p class="q5__vertical__table__txt inner1">table</p>
           </div>
         </div>
         <!-- Q5-2の回答はここに書いてね -->
@@ -96,7 +96,7 @@
         -->
         <!-- Q5-2の回答はここに書いてね -->
         <div class="q5__box main3">
-            <p>flex</p>
+            <p class="inner2">flex</p>
         </div>
         <!-- Q5-2の回答はここに書いてね -->
 
@@ -110,7 +110,7 @@
             -->
             <!-- Q5-2の回答はここに書いてね -->
             <div class="q5__box__inner main4">
-                <p class="q5__box__inner--stable">position固定</p>
+                <p class="q5__box__inner--stable inner3">position固定</p>
             </div>
             <!-- Q5-2の回答はここに書いてね -->
 
@@ -124,7 +124,7 @@
             <!-- Q5-2の回答はここに書いてね -->
 
             <div class="q5__box__inner main5">
-                <p class="q5__box__inner--flexible">position可変</p>
+                <p class="q5__box__inner--flexible inner4">position可変</p>
             </div>
           </div>
             <!-- Q5-2の回答はここに書いてね -->
