--- a/layout-parts/q6/index.html
+++ b/layout-parts/q6/index.html
@@ -29,25 +29,28 @@
         <!-- 回答はここに書いてね -->
         <div class="q6">
             <p class="title--sub">ー small ー</p>
-
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+              <div class="main clearfix">
+                <div><button class="common1 common-layout">common</button></div>
+                <div><button class="error1 error-layout">error</button></div>
+                <div><button class="disabled1 disabled-layout">disabled</button></div>
+                <div><button class="shadow1 shadow-layout">shadow</button></div>
+              </div>
 
             <p class="title--sub mt10">ー middle ー</p>
+              <div class="main clearfix">
+                <div><button class="common2 common-layout">common</button></div>
+                <div><button class="error2 error-layout">error</button></div>
+                <div><button class="disabled2 disabled-layout">disabled</button></div>
+                <div><button class="shadow2 shadow-layout">shadow</button></div>
+              </div>
 
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
-
-            <p class="title--sub mt10">ー large ー</p>
-
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <p class="title--sub mt10 clearfix">ー large ー</p>
+              <div class="main clearfix">
+                <div><button class="common3 common-layout">common</button></div>
+                <div><button class="error3 error-layout">error</button></div>
+                <div><button class="disabled3 disabled-layout">disabled</button></div>
+                <div><button class="shadow3 shadow-layout">shadow</button></div>
+              </div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
