Q6の修正版です

--- a/layout-parts/q6/index.html
+++ b/layout-parts/q6/index.html
@@ -30,26 +30,26 @@
         <div class="q6">
             <p class="title--sub">ー small ー</p>
               <div class="main clearfix">
-                <div><button class="common1 common-layout">common</button></div>
-                <div><button class="error1 error-layout">error</button></div>
-                <div><button class="disabled1 disabled-layout">disabled</button></div>
-                <div><button class="shadow1 shadow-layout">shadow</button></div>
+                <a href="#" class="common1 common-layout">common</a>
+                <a href="#" class="error1 error-layout">error</a>
+                <a href="#" class="disabled1 disabled-layout">disabled</a>
+                <a href="#" class="shadow1 shadow-layout">shadow</a>
               </div>
 
             <p class="title--sub mt10">ー middle ー</p>
               <div class="main clearfix">
-                <div><button class="common2 common-layout">common</button></div>
-                <div><button class="error2 error-layout">error</button></div>
-                <div><button class="disabled2 disabled-layout">disabled</button></div>
-                <div><button class="shadow2 shadow-layout">shadow</button></div>
+                <a href="#" class="common2 common-layout">common</a>
+                <a href="#" class="error2 error-layout">error</a>
+                <a href="#" class="disabled2 disabled-layout">disabled</a>
+                <a href="#" class="shadow2 shadow-layout">shadow</a>
               </div>
 
             <p class="title--sub mt10 clearfix">ー large ー</p>
               <div class="main clearfix">
-                <div><button class="common3 common-layout">common</button></div>
-                <div><button class="error3 error-layout">error</button></div>
-                <div><button class="disabled3 disabled-layout">disabled</button></div>
-                <div><button class="shadow3 shadow-layout">shadow</button></div>
+                <a href="#" class="common3 common-layout">common</a>
+                <a href="#" class="error3 error-layout">error</a>
+                <a href="#" class="disabled3 disabled-layout">disabled</a>
+                <a href="#" class="shadow3 shadow-layout">shadow</a>
               </div>
         </div>
         <!-- 回答はここに書いてね -->
