--- a/layout-parts/q6/index.html
+++ b/layout-parts/q6/index.html
@@ -29,7 +29,7 @@
         <!-- 回答はここに書いてね -->
         <div class="q6">
             <p class="title--sub">ー small ー</p>
-              <div class="main clearfix">
+              <div class="main">
                 <a href="#" class="common1 common-layout">common</a>
                 <a href="#" class="error1 error-layout">error</a>
                 <a href="#" class="disabled1 disabled-layout">disabled</a>
@@ -37,15 +37,15 @@
               </div>
 
             <p class="title--sub mt10">ー middle ー</p>
-              <div class="main clearfix">
+              <div class="main">
                 <a href="#" class="common2 common-layout">common</a>
                 <a href="#" class="error2 error-layout">error</a>
                 <a href="#" class="disabled2 disabled-layout">disabled</a>
                 <a href="#" class="shadow2 shadow-layout">shadow</a>
               </div>
 
-            <p class="title--sub mt10 clearfix">ー large ー</p>
-              <div class="main clearfix">
+            <p class="title--sub mt10">ー large ー</p>
+              <div class="main">
                 <a href="#" class="common3 common-layout">common</a>
                 <a href="#" class="error3 error-layout">error</a>
                 <a href="#" class="disabled3 disabled-layout">disabled</a>
