--- a/layout-parts/q11/index.html
+++ b/layout-parts/q11/index.html
@@ -41,6 +41,13 @@
         ・:hover
         -->
         <!-- 回答はここに書いてね -->
+        <div class="container">
+          <img class="content" src="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/img/q11/thumb.jpg">
+          <div class="inner">
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
+        </div>
 
         <!-- 回答はここに書いてね -->
 
@@ -55,6 +62,9 @@
         ・transform
         -->
         <!-- 回答はここに書いてね -->
+        <div class="load">
+          <div class="loader"></div>
+        </div>
 
         <!-- 回答はここに書いてね -->
     </div>
