--- a/layout-parts/q7/index.html
+++ b/layout-parts/q7/index.html
@@ -48,6 +48,47 @@
         ・:after
         -->
         <!-- 回答はここに書いてね -->
+      <main class="container">
+        <div class="box1">
+          <input class="text"　type="text" placeholder="input=&quot;text&quot;">
+        </div>
+        <div class="box1 text-color">
+          <textarea class="text2" type="text" placeholder="textarea(サイズ固定)"></textarea>
+        </div>
+        <div class="box1">
+          <label class="label">
+           <input class="radio-icon" type="radio" name="radio">
+           <span class="radio-text">
+              radio1
+            </span>
+          </label>
+          <label class="label">
+            <input class="radio-icon" type="radio" name="radio">
+            <span class="radio-text">
+              radio2
+            </span>
+          </label>
+        </div>
+        <div class="box1">
+          <label class="label-checkbox">
+           <input type="checkbox" class="checkbox">
+           <span class="checkbox-btn">checkbox</span>
+         </label>
+        </div>
+        <div class="box1">
+          <div class="select-box">
+          	<select>
+          		<option>select1</option>
+          		<option>select2</option>
+          		<option>select3</option>
+          	</select>
+          </div>
+        </div>
+        <div class="box1">
+          <button class="btn">button</button>
+        </div>
+      </div>
+
 
         <!-- 回答はここに書いてね -->
     </div>
