--- a/layout-parts/q8/index.html
+++ b/layout-parts/q8/index.html
@@ -34,15 +34,15 @@
         ・display: table-cell
         -->
         <!-- 回答はここに書いてね -->
-        <div class="q8">
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q8 main">
+            <div class="body item1">固定</div>
+            <div class="body item2">可変</div>
+            <div class="body item3">固定</div>
         </div>
-        <div class="q8">
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q8 main">
+            <div class="body item4">可変</div>
+            <div class="body item5">可変</div>
+            <div class="body item6">固定</div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
