--- a/layout-parts/q9/index.html
+++ b/layout-parts/q9/index.html
@@ -21,11 +21,13 @@
             <p class="headline__txt">Q9. グリッドレイアウト</p>
         </h2>
         <!--
-        最近のレイアウトの流行りで、グリッドレイアウトというものがあります。レイアウトを均等に分けて、マス目上で考えることできれいなレイアウト作りをしやすくする考え方です。
+        最近のレイアウトの流行りで、グリッドレイアウトというものがあります。レイアウトを均等に分けて、マス目上で考えること
+        できれいなレイアウト作りをしやすくする考え方です。
         詳細はこちらで確認してください。 -> http://morobrand.net/mororeco/html/gridlayout/
 
         上記URLの内容を理解した前提で進めます。
-        グリッドデザインでは、12という数字を基準としてグリッドをわけます。100%一つで表示する際はグリッドの数字は12、50%二つで表示する際はグリッドの数字は6といった具合です。
+        グリッドデザインでは、12という数字を基準としてグリッドをわけます。100%一つで表示する際はグリッドの数字は12、
+        50%二つで表示する際はグリッドの数字は6といった具合です。
 
         今回は可変グリッドデザインの基本レイアウトを作ってもらいます。可変なのでwidthを固定することなく%で指定しなければなりません。
         既にHTMLに数字が記述してあるので、その数字を元に%を指定していきましょう。
@@ -36,50 +38,50 @@
         今回もHTMLは記述してあるので、新たにclassを付与してスタイルをあててください。
         -->
         <!-- 回答はここに書いてね -->
-        <div>
-            <div>
-                <div><div>12</div></div>
+        <div class="body">
+            <div class="bottom">
+                <div class="inner12 box-sizing"><div class="size">12</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner6 box-sizing"><div class="size">6</div></div>
+                <div class="inner6 box-sizing"><div class="size">6</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner4 box-sizing"><div class="size">4</div></div>
+                <div class="inner4 box-sizing"><div class="size">4</div></div>
+                <div class="inner4 box-sizing"><div class="size">4</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner24 box-sizing"><div class="size">2.4</div></div>
+                <div class="inner24 box-sizing"><div class="size">2.4</div></div>
+                <div class="inner24 box-sizing"><div class="size">2.4</div></div>
+                <div class="inner24 box-sizing"><div class="size">2.4</div></div>
+                <div class="inner24 box-sizing"><div class="size">2.4</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+            </div>
+            <div class="bottom">
+                <div class="inner6 box-sizing"><div class="size">6</div></div>
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
+                <div class="inner3 box-sizing"><div class="size">3</div></div>
             </div>
             <div>
-                <div><div>6</div></div>
-                <div><div>6</div></div>
-            </div>
-            <div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
-            </div>
-            <div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-            </div>
-            <div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-            </div>
-            <div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-            </div>
-            <div>
-                <div><div>6</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-            </div>
-            <div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner2 box-sizing"><div class="size">2</div></div>
+                <div class="inner4 box-sizing"><div class="size">4</div></div>
+                <div class="inner4 box-sizing"><div class="size">4</div></div>
             </div>
         </div>
         <!-- 回答はここに書いてね -->
